--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
   "version": 2,
-  "builds": [{ "src": "dist/server.js" }, { "use": "@vercel/node" }],
-
+  "builds": [{ "src": "dist/server.js", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/(.*)",
